# mosaicneitor

./: Cargo.toml  LICENSE  README.md
doc/: _to_do_.md  _to_guide_.md  to_do.md  zz_bitacora.md  zz_done_done.md
locales/: en.json  en.yml  es.json  es.yml
src/: config.rs  main.rs  mosaic.rs  user_interface.rs  user_interface_app.rs  utils.rs  zz-discarded_code_chunks.txt
