[package]
name = "mosaicneitor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
dirs = "5.0.1"
egui-file-dialog = "0.6.0"
image = "0.25.2"
egui_extras = "0.28.1"
rust-i18n = "3.1.2"

[package.metadata.i18n]
locales = ["en", "es"]

